--- a/test/fixtures/book_comments.yml
+++ b/test/fixtures/book_comments.yml
@@ -3,9 +3,9 @@
 one:
   comment: MyText
   user_id: 1
-  book_id: 1
+  beer_id: 1
 
 two:
   comment: MyText
   user_id: 1
-  book_id: 1
+  beer_id: 1
